--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         frame-ancestors * data: blob: 'unsafe-inline';"><!-- Por causa dos vários destinos de HLS diferente, tenho que permitir o acesso a todos os sites -->
         <link rel="icon" type="image/x-icon" href="favicon.ico">
         <title>Player Live - TV</title>
-        <link href="loading.css" rel="stylesheet">
+        <link href="css/loading.css" rel="stylesheet">
         <style>#loading svg {width: 25vw;max-width:350px;}</style>
-        <link href="main.css" rel="stylesheet">
+        <link href="css/main.css" rel="stylesheet">
     </head>
     <body>
         <div id="loading" style="position:fixed;top:0;left:0;width:100%;height:100%;background:#000;z-index:999;"><!-- Imagem carregada no codigo para carregamento instantâneo -->
@@ -44,8 +44,8 @@
         </div>
         <div class="debug"></div>
     </body>
-    <script type="text/javascript" src="hls.min.js"></script>
-    <script type="text/javascript" src="jquery-3.6.0.min.js"></script>
-    <script type="text/javascript" src="jquery.scrollTo.min.js"></script>
-    <script type="text/javascript" src="main.js"></script>
+    <script type="text/javascript" src="js/hls.min.js"></script>
+    <script type="text/javascript" src="js/jquery-3.6.0.min.js"></script>
+    <script type="text/javascript" src="js/jquery.scrollTo.min.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
 </html>
